Refactor HTML and JavaScript for better readability

--- a/index.html
+++ b/index.html
@@ -1,57 +1,19 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ハナハナ設定判別</title>
   <style>
-    body {
-      font-family: sans-serif;
-      background: #f5f5f5;
-      padding: 10px;
-    }
-    h1, h2 {
-      margin: 10px 0;
-    }
-    input, select, button {
-      width: 100%;
-      padding: 8px;
-      margin: 5px 0;
-      font-size: 16px;
-    }
-    button {
-      background: #333;
-      color: white;
-      border: none;
-      border-radius: 4px;
-    }
-    .card {
-      background: white;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 6px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    .small {
-      font-size: 12px;
-      color: #666;
-    }
-    .red {
-      color: #d00;
-      font-weight: bold;
-    }
-    .aim-label {
-      background: gold;
-      padding: 4px;
-      text-align: center;
-      margin-top: 5px;
-      border-radius: 4px;
-      font-weight: bold;
-    }
-    .delete {
-      background: #c00;
-      margin-top: 5px;
-    }
+    body { font-family: sans-serif; background:#f5f5f5; padding:10px; }
+    h1,h2 { margin:10px 0; }
+    input,select,button { width:100%; padding:8px; margin:5px 0; font-size:16px; }
+    button { background:#333; color:#fff; border:none; border-radius:4px; }
+    .card { background:#fff; padding:10px; margin:10px 0; border-radius:6px; box-shadow:0 2px 5px rgba(0,0,0,.1); }
+    .small { font-size:12px; color:#666; }
+    .red { color:#d00; font-weight:bold; }
+    .aim-label { background:gold; padding:4px; text-align:center; margin-top:6px; border-radius:4px; font-weight:bold; }
+    .delete { background:#c00; margin-top:6px; }
   </style>
 </head>
 <body>
@@ -63,11 +25,11 @@
   <option value="close">閉店後モード</option>
 </select>
 
-<input id="date" type="date" />
-<input id="machine" placeholder="台番号" />
-<input id="games" placeholder="総回転数" type="number" />
-<input id="bb" placeholder="BB回数" type="number" />
-<input id="rb" placeholder="RB回数" type="number" />
+<input id="date" type="date">
+<input id="machine" placeholder="台番号" type="number">
+<input id="games" placeholder="総回転数" type="number">
+<input id="bb" placeholder="BB回数" type="number">
+<input id="rb" placeholder="RB回数" type="number">
 
 <button onclick="saveData()">保存</button>
 
@@ -80,6 +42,7 @@
 <script>
 let data = JSON.parse(localStorage.getItem("hanahanaData")) || [];
 
+/* ===== 保存 ===== */
 function saveData() {
   const d = {
     date: document.getElementById("date").value,
@@ -97,19 +60,22 @@ function saveData() {
   render();
 }
 
+/* ===== 設定推定（修正版） ===== */
 function estimateSetting(g, bb, rb, mode) {
-  if (g < (mode === "close" ? 3000 : 800)) return 0;
+  if (mode === "open" && g < 1500) return 0;
+  if (mode === "close" && g < 3000) return 0;
 
   const rbRate = g / rb;
 
-  if (rbRate < 220) return 6;
-  if (rbRate < 250) return 5;
+  if (rbRate < 220) return mode === "open" && g < 3000 ? 4 : 6;
+  if (rbRate < 250) return mode === "open" ? 4 : 5;
   if (rbRate < 280) return 4;
   if (rbRate < 330) return 3;
   if (rbRate < 400) return 2;
   return 1;
 }
 
+/* ===== 信頼度 ===== */
 function confidence(g, rb, mode) {
   if (mode === "close") {
     if (g >= 7000) return "★★★★★";
@@ -118,7 +84,7 @@ function confidence(g, rb, mode) {
     return "★★☆☆☆";
   } else {
     if (g >= 3000) return "★★★☆☆";
-    if (g >= 1500) return "★★☆☆☆";
+    if (g >= 2000) return "★★☆☆☆";
     return "★☆☆☆☆";
   }
 }
@@ -127,85 +93,82 @@ function starCount(s) {
   return (s.match(/★/g) || []).length;
 }
 
-function deleteData(index) {
+/* ===== 削除 ===== */
+function deleteData(i) {
   if (!confirm("削除する？")) return;
-  data.splice(index, 1);
+  data.splice(i,1);
   localStorage.setItem("hanahanaData", JSON.stringify(data));
   render();
 }
 
+/* ===== ホール傾向 ===== */
 function analyzeHallTrend() {
-  let keep = 0, up = 0, down = 0, unknown = 0;
+  let keep=0, up=0, down=0, unknown=0;
 
-  const sorted = [...data].sort((a, b) =>
-    a.machine !== b.machine
-      ? a.machine - b.machine
-      : a.date.localeCompare(b.date)
+  const sorted = [...data].sort((a,b)=>
+    a.machine !== b.machine ? a.machine-b.machine : a.date.localeCompare(b.date)
   );
 
-  for (let i = 1; i < sorted.length; i++) {
-    const t = sorted[i];
-    const y = sorted[i - 1];
+  for (let i=1;i<sorted.length;i++) {
+    const t = sorted[i], y = sorted[i-1];
     if (t.machine !== y.machine) continue;
 
-    const tSet = estimateSetting(t.games, t.bb, t.rb, "close");
-    const ySet = estimateSetting(y.games, y.bb, y.rb, "close");
+    const ts = estimateSetting(t.games,t.bb,t.rb,"close");
+    const ys = estimateSetting(y.games,y.bb,y.rb,"close");
 
-    if (!tSet || !ySet) {
-      unknown++;
-    } else if (ySet >= 4 && tSet >= 4) {
-      keep++;
-    } else if (ySet <= 2 && tSet >= 4) {
-      up++;
-    } else if (ySet >= 4 && tSet <= 2) {
-      down++;
-    } else {
-      unknown++;
-    }
+    if (!ts || !ys) unknown++;
+    else if (ys>=4 && ts>=4) keep++;
+    else if (ys<=2 && ts>=4) up++;
+    else if (ys>=4 && ts<=2) down++;
+    else unknown++;
   }
 
-  const total = keep + up + down + unknown || 1;
+  const total = keep+up+down+unknown || 1;
+  let type="傾向不明";
+  if (keep/total>=0.5) type="🟧 据え置き重視店";
+  else if (up/total>=0.3) type="🟩 上げ狙い有効店";
+  else if (down/total>=0.3) type="🟥 下げ多め注意店";
 
-  let type = "傾向不明";
-  if (keep / total >= 0.5) type = "🟧 据え置き重視店";
-  else if (up / total >= 0.3) type = "🟩 上げ狙い有効店";
-  else if (down / total >= 0.3) type = "🟥 下げ多め注意店";
-
-  return { keep, up, down, unknown, total, type };
+  return {keep,up,down,unknown,total,type};
 }
 
+/* ===== 描画 ===== */
 function render() {
   const mode = document.getElementById("mode").value;
   const list = document.getElementById("list");
-  list.innerHTML = "";
+  list.innerHTML="";
 
-  data.forEach((d, i) => {
-    const total = d.bb + d.rb;
-    const gassan = total ? Math.floor(d.games / total) : "-";
-    const rbRate = d.rb ? Math.floor(d.games / d.rb) : "-";
+  data.forEach((d,i)=>{
+    const total = d.bb+d.rb;
+    const gassan = total ? Math.floor(d.games/total) : "-";
+    const rbRate = d.rb ? Math.floor(d.games/d.rb) : "-";
 
-    const set = estimateSetting(d.games, d.bb, d.rb, mode);
-    const conf = confidence(d.games, d.rb, mode);
-    const aim = set >= 4 && starCount(conf) >= 4;
+    const set = estimateSetting(d.games,d.bb,d.rb,mode);
+    const conf = confidence(d.games,d.rb,mode);
 
-    const card = document.createElement("div");
-    card.className = "card";
-    card.innerHTML = `
+    /* 🔥 狙い目は閉店後基準で固定 */
+    const aim =
+      estimateSetting(d.games,d.bb,d.rb,"close") >= 4 &&
+      starCount(confidence(d.games,d.rb,"close")) >= 4;
+
+    const card=document.createElement("div");
+    card.className="card";
+    card.innerHTML=`
       <div class="small">${d.date}</div>
       <div>台番号：${d.machine}</div>
       <div>${d.games}G / BB:${d.bb} RB:${d.rb}</div>
       <div>合算：1/${gassan}</div>
       <div>RB：1/${rbRate}</div>
-      <div class="red">推定設定：${set || "判別不可"}</div>
+      <div class="red">推定設定：${set||"判別不可"}</div>
       <div>信頼度：${conf}</div>
-      ${aim ? `<div class="aim-label">🔥 狙い目</div>` : ""}
+      ${aim?`<div class="aim-label">🔥 狙い目</div>`:""}
       <button class="delete" onclick="deleteData(${i})">削除</button>
     `;
     list.appendChild(card);
   });
 
   const hall = analyzeHallTrend();
-  document.getElementById("hall").innerHTML = `
+  document.getElementById("hall").innerHTML=`
     <div class="card">
       <div>据え：${hall.keep}</div>
       <div>上げ：${hall.up}</div>
